# Patriarch

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: CompilerIssues.md  Patriarch_Session_Report.md
source/: Pater_DSPOption.cpp  Pater_DSPOption.h  Pater_Fifo.h  Pater_Gui.cpp  Pater_Gui.h  Pater_Params.cpp  Pater_Params.h  Pater_RotaryKnob.cpp  Pater_RotaryKnob.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/Constants/: Pater_Constants.h  Pater_Theme.h
source/DSP/Delay Line/Delay/: DelayLine.h
source/DSP/Phasers/: Pater_MonoPhaser.cpp  Pater_MonoPhaser.h  Pater_StereoPhaser.cpp  Pater_StereoPhaser.h
source/Spectrum Analyzer/: Pater_AnalyzerConstants.h  Pater_AnalyzerTypes.h
source/Spectrum Analyzer/Analyzer/: Pater_FFT.h  Pater_MSFFT.h
source/Spectrum Analyzer/Controllers/: Pater_BandController.cpp  Pater_BandController.h  Pater_FFTController.cpp  Pater_FFTController.h  Pater_MSController.cpp  Pater_MSController.h  Pater_MenuController.cpp  Pater_MenuController.h
source/Spectrum Analyzer/Display/: Pater_BandDisplay.cpp  Pater_BandDisplay.h  Pater_FFTDisplay.cpp  Pater_FFTDisplay.h  Pater_InfoDisplay.cpp  Pater_InfoDisplay.h  Pater_MCIDisplay.cpp  Pater_MCIDisplay.h  Pater_MSDisplay.cpp  Pater_MSDisplay.h  Pater_MenuDisplay.cpp  Pater_MenuDisplay.h  Pater_SettingsDisplay.cpp  Pater_SettingsDisplay.h
source/Spectrum Analyzer/Params/: Pater_FFTParams.h  Pater_FilterConstants.h  Pater_ValueConverter.cpp  Pater_ValueConverter.h
source/Spectrum Analyzer/Processor/: Pater_BaseProcessor.h  Pater_EQ.cpp  Pater_EQ.h  Pater_MSProcessor.cpp  Pater_MSProcessor.h
source/dsp/Delay/: DelayLine.cpp
source/filters/: Pater_Tanh_IIRFilter.h
